{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 27,
  "lineage": "20c26f23-7008-8a69-aaa1-0e546d85cd47",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-098630c7765825a52",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-21-2-144.compute-1.amazonaws.com",
            "public_ip": "23.21.2.144",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211442454782:internet-gateway/igw-0cd00c8e572dd2c15",
            "id": "igw-0cd00c8e572dd2c15",
            "owner_id": "211442454782",
            "tags": {
              "project": "WebProd"
            },
            "vpc_id": "vpc-02973263a6f6be67f"
          },
          "dependencies": [
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098630c7765825a52",
            "id": "nat-0422b27fcc5826473",
            "network_interface_id": "eni-0b85063251c03bef6",
            "private_ip": "10.0.2.145",
            "public_ip": "23.21.2.144",
            "subnet_id": "subnet-0e065b17fddf5df83",
            "tags": {
              "project": "WebProd"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.privatesubnet",
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211442454782:route-table/rtb-072bc39f83017ceb2",
            "id": "rtb-072bc39f83017ceb2",
            "owner_id": "211442454782",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0422b27fcc5826473",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-02973263a6f6be67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.privatesubnet",
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211442454782:route-table/rtb-0547e2c1b87ce8bc3",
            "id": "rtb-0547e2c1b87ce8bc3",
            "owner_id": "211442454782",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd00c8e572dd2c15",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-02973263a6f6be67f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211442454782:subnet/subnet-0e065b17fddf5df83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e065b17fddf5df83",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211442454782",
            "vpc_id": "vpc-02973263a6f6be67f"
          },
          "dependencies": [
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211442454782:subnet/subnet-018549aa4716b05b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-018549aa4716b05b2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211442454782",
            "vpc_id": "vpc-02973263a6f6be67f"
          },
          "dependencies": [
            "aws_vpc.webvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211442454782:vpc/vpc-02973263a6f6be67f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a752f5d95ed4d597",
            "default_route_table_id": "rtb-00e0d2ad26bceda73",
            "default_security_group_id": "sg-010aaf78c24309cb6",
            "dhcp_options_id": "dopt-03f6d628154540418",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02973263a6f6be67f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00e0d2ad26bceda73",
            "owner_id": "211442454782",
            "tags": {
              "project": "WebProd"
            },
            "tags_all": {
              "project": "WebProd"
            }
          }
        }
      ]
    }
  ]
}